Start working on Andy's new comments

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -107,7 +107,7 @@
 
 \begin{abstract}
 
-With urban areas facing longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed to protect city residents. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) is needed to help guide the development of thermally comfortable cities. To inform planning, modelling tools are needed that provide sufficient resolution to resolve urban influences on HTC and the ability to model important physiological processes of vegetation. To achieve this, a new micro-scale model, VTUF-3D (Vegetated Temperatures of Urban Facets), has been developed using an innovative approach of embedding the functionality of the MAESPA tree process model \citep{Duursma2012}, a model that can model individual trees, vegetation, and soil components, within the TUF-3D \citep{Krayenhoff2007} urban micro-climate model. A innovative tiling approach allows the new model to account for important vegetative physiological processes and shading effects, using configurable templates to allow representation of any type of vegetation or water sensitive design feature. This work enables detailed calculations of surface temperatures ($T_{sfc}$), mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across an urban canyon. This study presents an overview of VTUF-3D. Also presented are two evaluations of VTUF-3D. The first compares modelled surface energy flux balances to observations in Preston, Australia \citep{Coutts2007}. The second using spatial and temporal predictions of $T_{mrt}$ and UTCI across two observed street canyons in the City of Melbourne \citep{Coutts2015}. The VTUF-3D model is shown to perform well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment. Using this model, it is now possible to conduct further analysis to quantify the impact each individual tree can have on temperatures in urban canyons. Further, the model can help inform the optimal arrangement and quantity of trees to maximise temperature moderation effects and be used to generate best practices guidelines for urban greening.
+With urban areas facing longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed to protect city residents. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) is needed to help guide the development of thermally comfortable cities. To inform planning, modelling tools are needed that provide sufficient resolution to resolve urban influences on HTC and the ability to model important physiological processes of vegetation. To achieve this, a new micro-scale model, VTUF-3D (Vegetated Temperatures of Urban Facets), has been developed using an innovative approach of embedding the functionality of the MAESPA tree process model \citep{Duursma2012}, a model that can model individual trees, vegetation, and soil components, within the TUF-3D \citep{Krayenhoff2007} urban micro-climate model. An innovative tiling approach allows the new model to account for important vegetative physiological processes and shading effects, using configurable templates to allow representation of any type of vegetation or water sensitive design feature. This work enables detailed calculations of surface temperatures ($T_{sfc}$), mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across an urban canyon. This study presents an overview of VTUF-3D. Also presented are two evaluations of VTUF-3D. The first compares modelled surface energy balance fluxes to observations in Preston, Australia \citep{Coutts2007}. The second using spatial and temporal predictions of $T_{mrt}$ and UTCI across two observed street canyons in the City of Melbourne \citep{Coutts2015}. The VTUF-3D model is shown to perform well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment. Using this model, it is now possible to conduct further analysis to quantify the impact each individual tree can have on conditions in urban canyons. Further, the model can help inform the optimal arrangement and quantity of trees to deliver improvements in HTC and be used to generate best practice guidelines for urban greening.
 
 
 \end{abstract}
@@ -191,12 +191,12 @@ Incorporating more vegetation and water into urban areas can effectively mitigat
 
 While the benefits of urban vegetation and water are well understood in the climate community, uptake and application of knowledge in urban planning is lacking. \cite{Bowler2010} suggests that the current research does not demonstrate exactly how urban greening should be implemented in terms of abundance, type, and distribution.  A suitable modelling tool is needed to provide solid quantitative assessments of the effectiveness of trees and water in terms of heat mitigation, across contrasting micro-scale urban environments, and therefore provide guidance on how to most effectively use trees and WSUD for improved HTC. 
 
-A suitable modelling tool for these assessments needs to resolve detailed temperature gradients (as well as wind speed and humidity in order to calculate HTC) across a modelled urban canyon, requiring micro-scaled resolution climate modelling. In addition, modelling needs to incorporate important cooling mechanisms of evapotranspiration and shading. Accounting for these effects requires proper modelling of vegetation, including vegetation physiology to estimate accurate latent energy fluxes and the soil-vegetation-atmosphere pathway critical for vegetation and WSUD assessments within the urban canyon. Models such as SOLWEIG \citep{Lindberg2008a} and RayMan \citep{Matzarakis2007,Matzarakis2010} resolve at a suitable scale and generate useful insights into mean radiant temperatures in urban areas \citep{Chen2014a}, however only capture the radiation shading effects of vegetation, and are unable to account for the effects of water and evapotranspiration. At the other end of the complexity spectrum, a number of models, primarily based on computational fluid dynamics (CFD), are able to resolve at a micro-scale and account for many of the influences of vegetation \citep{Bailey2014,Bailey2016,Kunz2000,Schlunzen2011a,Yamada2011,Bruse1999}. However their complexity and computational intensity puts them out of reach for less specialised users. As a point of comparison with other models at this scale, VTUF-3D calculates a 30 day simulation using hourly timesteps of a 200x200m area with 5m resolution on a standard desktop computer in an hour or two (at least an order of magnitude less than required by a CFD based model).
+A suitable modelling tool for these assessments needs to resolve detailed temperature gradients (as well as wind speed and humidity in order to calculate HTC) across a modelled urban canyon, requiring micro-scaled resolution climate modelling. In addition, modelling needs to incorporate important cooling mechanisms of evapotranspiration and shading. Accounting for these effects requires proper modelling of vegetation, including vegetation physiology to estimate accurate latent energy fluxes and the soil-vegetation-atmosphere pathway critical for vegetation and WSUD assessments within the urban canyon. Models such as SOLWEIG \citep{Lindberg2008a} and RayMan \citep{Matzarakis2007,Matzarakis2010} resolve at a suitable scale and generate useful insights into mean radiant temperatures in urban areas \citep{Chen2014a}, however only capture the radiation shading effects of vegetation, and are unable to account for the effects of water and evapotranspiration. At the other end of the complexity spectrum, a number of models, primarily based on computational fluid dynamics (CFD), are able to resolve at a micro-scale and account for many of the influences of vegetation \citep{Bailey2014,Bailey2016,Kunz2000,Schlunzen2011a,Yamada2011,Bruse1999}. However their complexity and computational intensity puts them out of reach for less specialised users. 
 
 
 What is needed is an approach that fits in between these two levels of complexity, a new innovative method to balance detail, accuracy, and complexity with efficiency and usability, while also being able to consider a wide variety of vegetation types and arrangements.  The approach also needs to balance complexity against usability to create a model that can be widely used to consider a large variety of questions about HTC impacts of urban vegetation in support of urban planning decisions and guidelines. 
 
-This study presents the development of a new model, VTUF-3D (Vegetated Temperatures of Urban Facets in 3D v1.0), with the aim of providing a model capable of assessing the benefits of vegetation (including trees) and WSUD on urban canopy layer air temperatures and HTC. VTUF-3D is developed from the TUF-3D (Temperatures Of Urban Facets in 3D) model \citep{Krayenhoff2007} that prior to this work lacked vegetation and water components. The TUF-3D model was coupled with the MAESPA model (an amalgamation of the MAESTRO (not an acronym) and SPA (Soil-plant-atmosphere) models)  \citep{Duursma2012}, allowing insertion of any type of vegetation in any arrangement into a modelling domain, to account for vegetation structural and physiological processes. This study also aims to evaluate the model, in terms of the surface energy balance, for an urban site in Melbourne, Australia, as well as against micro-climate observations of $T_{mrt}$ and UTCI recorded across two streets (with differing canopy cover) in the City of Melbourne. 
+This study presents the development of a new model, VTUF-3D (Vegetated Temperatures of Urban Facets in 3D v1.0), with the aim of providing a model capable of assessing the benefits of vegetation (including trees) and WSUD on urban canopy layer air temperatures and HTC. VTUF-3D is developed from the TUF-3D (Temperatures Of Urban Facets in 3D) model \citep{Krayenhoff2007} that prior to this work, lacked vegetation and water components. The TUF-3D model was coupled with the MAESPA model (an amalgamation of the MAESTRO (not an acronym) and SPA (Soil-plant-atmosphere) models)  \citep{Duursma2012}, allowing insertion of any type of vegetation in any arrangement into a modelling domain, to account for vegetation structural and physiological processes. This study also aims to evaluate the model, in terms of the surface energy balance, for an urban site in Melbourne, Australia, as well as against micro-climate observations of $T_{mrt}$ and UTCI recorded across two streets (with differing canopy cover) in the City of Melbourne. As a point of comparison with other models at this scale, VTUF-3D calculates a 30 day simulation using hourly timesteps of a 200x200m area with 5m resolution on a standard desktop computer in an hour or two (at least an order of magnitude less than required by a CFD based model).
 
 VTUF-3D has the capacity to address the research gap identified by \cite{Bowler2010} of how vegetation (especially trees) should be best implemented in terms of abundance, type and distribution, as well as the potential for accounting for water availability through WSUD. Analysis from VTUF-3D can facilitate the integration of urban greening into the urban landscapes and inform planning decisions, with urban climate knowledge, about how to best utilise urban greening to maximise the thermal comfort impacts and meet the challenges of urban heat. VTUF-3D can help inform how to best to protect human health in light of all the concerning trends progressing in urban areas.
 
@@ -204,13 +204,14 @@ VTUF-3D has the capacity to address the research gap identified by \cite{Bowler2
 
 \subsection{Overview of the VTUF-3D model}\label{sec:DesignOverview}
 
-VTUF-3D is constructed using the TUF-3D model, as described in \cite{Krayenhoff2007}, leaving all its components largely unchanged except for the two interactions as described in this overview of changes. The ability to include vegetation in modelling scenarios is added through the integration of the MAESPA model \citep{Duursma2012}. Two major changes were made to the TUF-3D model to add this missing functionality. The first is the representation of the physical form of vegetation and the associated radiative interactions within an urban canyon. VTUF-3D uses cube shaped structures (as TUF-3D uses to represent buildings) to also represent vegetation. A single tower of cubes forms the tree trunk at the x,y location of the tree and extends upward to the height of the tree. If a canopy extends past the surface grid square boundaries, additional cubes are allowed to overhang the ground surface to fill out the full width of the canopy. These cubes store the surface properties and states and interact with the rest of the VTUF-3D domain. The true shape of the vegetation (e.g. ellipsoidal, conical, etc.) is represented in MAESPA, with each vegetation element individually modelled offline, calculating values of vegetation absorption, transmission, and reflection to be loaded by VTUF-3D as needed in a simulation (Figure \ref{fig:TUFWithMaespaVegRadiation}).
+VTUF-3D is constructed using the TUF-3D model, as described in \cite{Krayenhoff2007}, leaving all its components largely unchanged except for the two interactions as described in this overview of changes. The ability to include vegetation in modelling scenarios is added through the integration of the MAESPA model \citep{Duursma2012}. Two major changes were made to the TUF-3D model to add this missing functionality. The first is the representation of the physical form of vegetation and the associated radiative interactions within an urban canyon. VTUF-3D uses cube shaped structures (as TUF-3D uses to represent buildings) to also represent vegetation. A single tower of cubes forms the tree trunk at the x,y location of the tree and extends upward to the height of the tree. If a canopy extends past the surface grid square boundaries, additional cubes are allowed to overhang (and shade) the ground surface to fill out the full width of the canopy. These cubes store the surface properties and states and interact with the rest of the VTUF-3D domain. The true shape of the vegetation (e.g. ellipsoidal, conical, etc.) is represented in MAESPA, with each vegetation element individually modelled offline, calculating values of vegetation absorption, transmission, and reflection to be loaded by VTUF-3D as needed in a simulation (Figure \ref{fig:TUFWithMaespaVegRadiation}).
 
 
 \begin{figure}[!htbp]
- \includegraphics[trim = 15mm 41mm 0mm 31mm, clip, scale=0.45]{images/TUFWithMaespaVegRadiation.png}  
- \caption{Integration of the tree model MAESPA into VTUF-3D radiation fluxes routines, in which tiled instances of MAESPA vegetation (in green) are used to calculate radiation transmission for VTUF-3D placeholder vegetation structures (in grey)\label{fig:TUFWithMaespaVegRadiation}.}
-\end{figure}
+%\fbox{
+ \includegraphics[trim = 35mm 75mm 5mm 81mm, clip, scale=0.28]{images/TUFWithMaespaVegRadiation.png} 
+% } 
+ \caption{Integration of the tree model MAESPA into VTUF-3D radiation fluxes routines, in which tiled instances of MAESPA vegetation (in green) are used to calculate radiation transmission for VTUF-3D placeholder vegetation structures (in grey)\label{fig:TUFWithMaespaVegRadiation}.}\end{figure}
 
 The second major change required is including the physiological processes of vegetation and soil in the model. Using a novel approach, MAESPA tiles replace VTUF-3D ground surfaces with vegetated MAESPA surfaces and use results of MAESPA's photosynthesis and water balance routines to modify VTUF-3D's energy balance calculations. The vegetation is treated as a flat two dimensional ground surface tile for the surface energy balances. However, each embedded MAESPA surface actually models a full 3 dimensional tree (along with associated soil and vertical movement of water) and feeds results back to VTUF-3D ground surface energy balances (Figure \ref{fig:TUFWithMaespaInsert}). Each grid cell is assumed to hold a single item of vegetation but can theoretically hold multiple items, as supported by MAESPA. In addition, VTUF-3D allows tree canopies to extend into neighbouring grid squares (overhanging whatever surface is contained in it) so can handle any grid resolution and properly model tree canopies which exceed the grid size.  
 
